--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <title>
-友邻广播
+友邻的友邻广播
 </title>
 <meta content="提供图书、电影、音乐唱片的推荐、评论和价格比较，以及城市独特的文化生活。" name="description"/>
     <link href="http://img3.douban.com/css/core/packed__init_1507990223.css" rel="stylesheet" type="text/css">
@@ -101,18 +101,8 @@
     </div>
     <div class="ext"></div>
 </div>
-
-
-
-
-
-
-
-
 </div>
 
-<script type="text/javascript" src="http://www.douban.com/js/api.js?v=2" />
-<script type="text/javascript" src="http://www.douban.com/js/api-parser.js?v=1"></script>
 
 <script type="text/javascript">
     $(document).ready(function () {
@@ -122,7 +112,7 @@
             $.getJSON('http://api.douban.com/people/' + $(this).val() + "/miniblog/contacts?alt=xd&max-results=50&callback=?",
             function (data) {
                 //console.log(data.entry);
-                //window.entry = data.entry;
+                window.entry = data.entry;
                 $.each(data.entry, function (index, item) {
                     console.log(item);
                     console.log(item.author.name.$t + ":" + item.author.link[1]['@href'] + item.author.link[2]['@href'] + item.title.$t);
@@ -130,11 +120,17 @@
                     var authorIcon = "<div class='status-item'><div class='mod'><div class='bd layout-None'><div class='hd'>" + '<img src=' + item.author.link[2]['@href'] + '></div>';
                     var authorName = "<a href='" + item.author.link[1]['@href'] + "'>" + item.author.name.$t + '</a>';
                     var authorSay = item.content.$t.toString();
-                    objContent.append(authorIcon + authorName + ":" + authorSay + '</div></div></div>');
+					var qq="";
+					if(item.hasOwnProperty('db:attribute')){
+						if(item['db:attribute'].length>2){
+							qq=item['db:attribute'][1].$t;
+						}
+					}
+                    objContent.append(authorIcon + authorName + ":" + authorSay +qq+ '</div></div></div>');
 
                 });//End of Each element of data entry
                 //data.entry.each(function () { console.log($(this)); });
-                console.log(data);
+                //console.log(data);
 
             });//End of Get json
         });//End of blur event of user id textbox
